--- a/src/lib/components/style.css
+++ b/src/lib/components/style.css
@@ -42,3 +42,13 @@
     padding: 8px;
     background-color: aliceblue;
 }
+
+.horizontal {
+    display: flex;
+    flex-direction: row;
+}
+
+.vertical {
+    display: flex;
+    flex-direction: column;
+}
